<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2018-2019. All rights reserved.
  ~
  ~ @author Pieter De Clercq
  ~ @author Tobiah Lissens
  ~
  ~ https://github.com/thepieterdc/dodona-api-java/
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.thepieterdc.dodona</groupId>
        <artifactId>dodona-api</artifactId>
        <version>2.0.7-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>api</artifactId>
    <name>Dodona API (interface)</name>
    <packaging>jar</packaging>
    <version>2.0.7-SNAPSHOT</version>

    <properties>
        <dodona.api>${basedir}/..</dodona.api>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${findbugs.jsr305.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.version}</version>
                <configuration>
                    <outputDirectory>docs</outputDirectory>
                    <source>11</source>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <skipTests>${skip.api.tests}</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
